--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,6 +1,6 @@
 [database]
-img_folder = './data/BBBC010_v2_images'
-msk_folder = './data/BBBC010_v1_foreground'
+img_folder = /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/BBBC010_v2_images
+msk_folder = /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/BBBC010_v1_foreground
 target_height = 400
 target_width = 400
-Nimages = 100 #100 images, each image has 2 channels
+Nimages = 100
