further fixes,files

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,4 +1,6 @@
 [database]
+root_folder= /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation
+data_folder= /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/
 img_folder = /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/BBBC010_v2_images
 msk_folder = /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/BBBC010_v1_foreground
 target_height = 400
