--- a/configuration.cfg
+++ b/configuration.cfg
@@ -6,3 +6,10 @@ msk_folder = /media/giorgos/Xtra HardDrive D:/msot_muscle_segmentation/data/BBBC
 target_height = 400
 target_width = 400
 Nimages = 100
+Ndata=5
+Nmodels=5
+
+
+[model]
+epochs=
+mode=1
